// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar el componente ProductCard con el ProductTitle sin props 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined "
  >
    Coffe Mug - with Image
  </span>
</div>
`;

exports[`ProductTitle debe mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined "
>
  custom title
</span>
`;
